--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -2,27 +2,32 @@ name: generate animation
 
 on:
   schedule:
-    - cron: "0 0 * * *"  # update tiap hari jam 00:00 UTC
+    - cron: "0 0 * * *" # tiap hari jam 00:00 UTC
   workflow_dispatch:
+
+permissions:
+  contents: write
 
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
+      - name: Checkout repository
         uses: actions/checkout@v3
 
-      - name: Generate Snake
+      - name: Generate Snake & Pacman
         uses: Platane/snk@v3
         with:
           github_user_name: FairuzzIslami
           outputs: |
-            output/snake.svg
-            output/pacman-contribution-graph.svg
-            output/pacman-contribution-graph-dark.svg
+            ./output/snake.svg
+            ./output/pacman-contribution-graph.svg
+            ./output/pacman-contribution-graph-dark.svg
 
-      - name: Push changes
-        uses: EndBug/add-and-commit@v9
+      - name: Push to output branch
+        uses: peaceiris/actions-gh-pages@v3
         with:
-          message: "Generated snake & pacman graph"
-          add: "output/*"
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_branch: output
+          publish_dir: ./output
+          force_orphan: true
