--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -1,33 +1,36 @@
-name: generate animation
+name: Generate Animations
 
 on:
   schedule:
-    - cron: "0 0 * * *" # tiap hari jam 00:00 UTC
-  workflow_dispatch:
-
-permissions:
-  contents: write
+    - cron: "0 */12 * * *" # jalan setiap 12 jam
+  workflow_dispatch:       # bisa run manual dari Actions tab
 
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout repository
+      - name: Checkout repo
         uses: actions/checkout@v3
 
-      - name: Generate Snake & Pacman
+      # Generate snake
+      - name: Generate Snake Animation
         uses: Platane/snk@v3
         with:
-          github_user_name: FairuzzIslami
-          outputs: |
-            ./output/snake.svg
-            ./output/pacman-contribution-graph.svg
-            ./output/pacman-contribution-graph-dark.svg
+          github_user_name: ${{ github.repository_owner }}
+          outputs: dist/snake.svg
 
-      - name: Push to output branch
-        uses: peaceiris/actions-gh-pages@v3
+      # Generate pacman
+      - name: Generate Pacman Animation
+        uses: Platane/platane-pacman@v1
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_branch: output
-          publish_dir: ./output
-          force_orphan: true
+          github_user_name: ${{ github.repository_owner }}
+          outputs: dist/pacman.svg
+
+      # Push hasil ke branch "output"
+      - name: Push to output branch
+        uses: crazy-max/ghaction-github-pages@v3
+        with:
+          target_branch: output
+          build_dir: dist
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
